--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "description": "",
   "dependencies": {
     "axios": "^1.9.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "express-useragent": "^1.0.15",
     "jsonwebtoken": "^9.0.2",
-    "mssql": "^11.0.1"
+    "mssql": "^11.0.1",
+    "winston": "^3.17.0"
   }
 }
